working on my navbar

--- a/bloglist.html
+++ b/bloglist.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The home page of my blog. My blog about outdoor activities">
+    <meta name="description" content="List of all the available blogs">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Raleway&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="/js/script.js" defer></script>
     <script src="/js/menu.js" defer></script>
-    <title>Home | My blog</title>
+    <title>Blog List | My blog</title>
 </head>
 
 <body>
@@ -27,9 +27,9 @@
             </a>
             <div class="navbar-links">
                 <ul>
-                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                    <li><a href="index.html" class="nav-link">Home</a></li>
                     <li><a href="about.html" class="nav-link">About</a></li>
-                    <li><a href="bloglist.html" class="nav-link">Blog Posts</a></li>
+                    <li><a href="bloglist.html" class="nav-link active">Blog Posts</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
             </div>
