--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The home page of my blog. My blog about outdoor activities">
+    <meta name="description" content="Get to know me and my blog a bit better with my about me section">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Raleway&display=swap" rel="stylesheet">
@@ -13,13 +13,13 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="/js/script.js" defer></script>
     <script src="/js/menu.js" defer></script>
-    <title>Home | My blog</title>
+    <title>About | My blog</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar">
-            <a href="#"><img src="/icons/icons8-evergreen-100.png" alt="logo of a tree" class="logo-icon"></a>
+            <a href="index.html"><img src="/icons/icons8-evergreen-100.png" alt="logo of a tree" class="logo-icon"></a>
             <a href="#" class="toggle-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -27,13 +27,14 @@
             </a>
             <div class="navbar-links">
                 <ul>
-                    <li><a href="index.html" class="nav-link active">Home</a></li>
-                    <li><a href="about.html" class="nav-link">About</a></li>
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="about.html" class="nav-link active">About</a></li>
                     <li><a href="bloglist.html" class="nav-link">Blog Posts</a></li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
                 </ul>
             </div>
         </nav>
+
     </header>
 </body>
 
