animated hamburger menu

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         <nav class="navbar">
             <a href="#"><img src="/icons/icons8-evergreen-100.png" alt="logo of a tree" class="logo-icon"></a>
             <a href="#" class="toggle-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+                <div class="menu-btn_burger"></div>
             </a>
             <div class="navbar-links">
                 <ul>
