worked on my featured section

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/16bf78a0e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="/js/script.js" defer></script>
-    <script src="/js/menu.js" defer></script>
+    <script src="/js/index.js" type="module" defer></script>
+    <script src="/js/menu.js" type="module" defer></script>
+    <script src="js/message.js" type="module" defer></script>
     <title>Home | My blog</title>
 </head>
 
@@ -33,6 +34,15 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="featured-img"></div>
+        <div class="slider">
+
+        </div>
+    </main>
 </body>
+<footer>
+    <div class="footer-container"></div>
+</footer>
 
 </html>
