--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/16bf78a0e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="/js/script.js" defer></script>
+    <script src="/js/about.js" defer></script>
     <script src="/js/menu.js" defer></script>
     <title>About | My blog</title>
 </head>
@@ -33,6 +33,9 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="about-content"></div>
+    </main>
 </body>
 
 </html>
