--- a/index.html
+++ b/index.html
@@ -36,8 +36,16 @@
     </header>
     <main>
         <div class="featured-img"></div>
-        <div class="slider">
+        <div class="slider-title"></div>
+        <div class="carousel-container">
+            <div class="carousel">
 
+            </div>
+            <a class="switchLeft slider-button">&#8249;</a>
+            <a class="switchRight slider-button">&#8250;</a>
+        </div>
+        <div class="slider-progress">
+            <div class="progress-bar"></div>
         </div>
     </main>
 </body>
