--- a/bloglist.html
+++ b/bloglist.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/16bf78a0e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="/js/script.js" defer></script>
+    <script src="/js/bloglist.js" defer></script>
     <script src="/js/menu.js" defer></script>
     <title>Blog List | My blog</title>
 </head>
@@ -33,6 +33,11 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="posts-container">
+
+        </div>
+    </main>
 </body>
 
 </html>
