--- a/bloglist.html
+++ b/bloglist.html
@@ -34,6 +34,7 @@
         </nav>
     </header>
     <main>
+        <div class="posts-header"></div>
         <div class="posts-container">
 
         </div>
