contact form and string parameter for blogposts

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/16bf78a0e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
     <script src="/js/about.js" defer></script>
-    <script src="/js/menu.js" defer></script>
+    <script src="/js/main.js" defer></script>
     <title>About | My blog</title>
 </head>
 
@@ -36,6 +36,11 @@
     <main>
         <div class="about-content"></div>
     </main>
+    <footer>
+        <div class="footer-container">
+
+        </div>
+    </footer>
 </body>
 
 </html>
