--- a/bloglist.html
+++ b/bloglist.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/16bf78a0e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
     <script src="/js/bloglist.js" defer></script>
-    <script src="/js/menu.js" defer></script>
+    <script src="/js/main.js" defer></script>
     <title>Blog List | My blog</title>
 </head>
 
@@ -35,10 +35,14 @@
     </header>
     <main>
         <div class="posts-header"></div>
-        <div class="posts-container">
+        <div class="posts-container"></div>
+        <div class="view-more-container"></div>
+    </main>
+    <footer>
+        <div class="footer-container">
 
         </div>
-    </main>
+    </footer>
 </body>
 
 </html>
