--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/16bf78a0e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="/js/script.js" defer></script>
-    <script src="/js/menu.js" defer></script>
+    <script src="/js/main.js" defer></script>
     <script src="/js/contact.js" defer></script>
     <title>Contact | My blog</title>
 </head>
@@ -34,44 +33,54 @@
             </div>
         </nav>
     </header>
-</body>
-<main>
-    <div class="contact-page">
-        <div class="contact">
-            <h1 class="h1-contact">Contact Us</h1>
-            <div id="message"></div>
-            <form>
-                <div>
-                    <label>
-                        Name *
-                        <input name="fullName" id="fullName" />
-                    </label>
-                    <div class="form-error" id="fullNameError">Please enter your name</div>
-                </div>
-                <div>
-                    <label>
-                        Subject *
-                        <input name="subject" id="subject" />
-                    </label>
-                    <div class="form-error" id="subjectError">Subject must be at least 1 characters</div>
-                </div>
-                <div>
-                    <label>
-                        Email address *
-                        <input name="email" id="email" />
-                    </label>
-                    <div class="form-error" id="emailError">Please enter a valid email address</div>
-                </div>
-                <div class="address-label">
-                    <label>
-                        Address *
-                        <input name="address" id="address" />
-                    </label>
-                    <div class="form-error" id="addressError">Address must be at least 1 characters</div>
-                </div>
-                <button type="submit" id="sendButton" disabled>Send</button>
-            </form>
+    <main>
+        <div class="contact-page">
+            <div class="contact">
+                <h1 class="h1-contact">Contact Us</h1>
+                <form>
+                    <div id="messageBox"></div>
+                    <div>
+                        <label>
+                            Name *
+                            <input name="fullName" id="fullName" />
+                        </label>
+                        <div class="form-error" id="fullNameError">Name should be more than 5 characters</div>
+                    </div>
+                    <div>
+                        <label>
+                            Email address *
+                            <input name="email" id="email" />
+                        </label>
+                        <div class="form-error" id="emailError">Please enter a valid email address</div>
+                    </div>
+                    <div>
+                        <label>
+                            Subject *
+                            <input name="subject" id="subject" />
+                        </label>
+                        <div class="form-error" id="subjectError">Subject must be at least 15 characters</div>
+                    </div>
+                    <div>
+                        <label>
+                            Message *
+                            <textarea name="message" id="message" cols="68" rows="10"></textarea>
+                        </label>
+                        <div class="form-error" id="messageError">Message must be at least 25 characters</div>
+                    </div>
+
+                    <button type="submit" id="sendButton" disabled>Submit Form</button>
+                    <div class="social-container">
+
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>
-</main>
+        <footer>
+            <div class="footer-container">
+
+            </div>
+        </footer>
+    </main>
+</body>
+
 </html>
