--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/16bf78a0e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
     <script src="/js/index.js" type="module" defer></script>
-    <script src="/js/menu.js" type="module" defer></script>
+    <script src="/js/main.js" type="module" defer></script>
     <script src="js/message.js" type="module" defer></script>
     <title>Home | My blog</title>
 </head>
@@ -50,7 +50,9 @@
     </main>
 </body>
 <footer>
-    <div class="footer-container"></div>
+    <div class="footer-container">
+
+    </div>
 </footer>
 
 </html>
