--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="#"><img src="/icons/icons8-evergreen-100.png" alt="logo of a tree" class="logo-icon"></a>
-            <a href="#" class="toggle-menu">
-                <div class="menu-btn_burger"></div>
-            </a>
-            <div class="navbar-links">
-                <ul>
-                    <li><a href="index.html" class="nav-link active">Home</a></li>
-                    <li><a href="about.html" class="nav-link">About</a></li>
-                    <li><a href="bloglist.html" class="nav-link">Blog Posts</a></li>
-                    <li><a href="contact.html" class="nav-link">Contact</a></li>
-                </ul>
+            <div class="nav-child">
+                <a href="#"><img src="/icons/icons8-evergreen-100.png" alt="logo of a tree" class="logo-icon"></a>
+                <a href="#" class="toggle-menu">
+                    <div class="menu-btn_burger"></div>
+                </a>
+                <div class="navbar-links">
+                    <ul>
+                        <li><a href="index.html" class="nav-link active">Home</a></li>
+                        <li><a href="about.html" class="nav-link">About</a></li>
+                        <li><a href="bloglist.html" class="nav-link">Blog Posts</a></li>
+                        <li><a href="contact.html" class="nav-link">Contact</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
