--- a/index.html
+++ b/index.html
@@ -39,15 +39,22 @@
     <main>
         <div class="featured-img"></div>
         <div class="slider-title"></div>
-        <div class="carousel-container">
-            <div class="carousel">
 
+        <div class="carousel-container">
+            <button class="carousel_button--left carousel_button is-hidden">&#8249;</button>
+            <div class="carousel_track-container">
+                <div class="carousel_track">
+                    <div class="carousel_slide">
+
+                    </div>
+                </div>
             </div>
-            <a class="switchLeft slider-button">&#8249;</a>
-            <a class="switchRight slider-button">&#8250;</a>
-        </div>
-        <div class="slider-progress">
-            <div class="progress-bar"></div>
+            <button class="carousel_button--right carousel_button">&#8250;</button>
+            <div class="carousel_nav">
+                <button class="carousel_indicator current-slide"></button>
+                <button class="carousel_indicator"></button>
+                <button class="carousel_indicator"></button>
+            </div>
         </div>
     </main>
 </body>
