--- a/index.html
+++ b/index.html
@@ -40,12 +40,24 @@
         <div class="featured-img"></div>
         <div class="slider-title"></div>
 
-        <div class="carousel-container">
+        <section class="carousel_container">
+            <button class="slide-arrow" id="slide-arrow-prev">&#8249;</button>
+            <button class="slide-arrow" id="slide-arrow-next">&#8250;</button>
+
+            <div class="slides-container" id="slides-container">
+                <div class="slide_container-wrapper">
+
+                </div>
+            </div>
+        </section>
+
+
+
+        <!-- <div class="carousel-container">
             <button class="carousel_button--left carousel_button is-hidden">&#8249;</button>
             <div class="carousel_track-container">
                 <div class="carousel_track">
                     <div class="carousel_slide">
-
                     </div>
                 </div>
             </div>
@@ -53,8 +65,8 @@
             <div class="carousel_nav">
                 <button class="carousel_indicator current-slide"></button>
                 <button class="carousel_indicator"></button>
-                <button class="carousel_indicator"></button>
-            </div>
+                <button class="carousel_indicator"></button> -->
+        </div>
         </div>
     </main>
 </body>
