--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     <script src="/js/main.js" type="module" defer></script>
     <script src="js/message.js" type="module" defer></script>
     <title>Home | My blog</title>
+    <!-- Hotjar Tracking Code for school blog exam -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 3263070, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
 </head>
 
 <body>
