--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
                 <div class="navbar-links">
                     <ul>
                         <li><a href="index.html" class="nav-link">Home</a></li>
+                        <li><a href="bloglist.html" class="nav-link">Posts</a></li>
                         <li><a href="about.html" class="nav-link">About</a></li>
-                        <li><a href="bloglist.html" class="nav-link">Blog Posts</a></li>
                         <li><a href="contact.html" class="nav-link active">Contact</a></li>
                     </ul>
                 </div>
@@ -50,7 +50,7 @@
     <main>
         <div class="contact-page">
             <div class="contact">
-                <h1 class="h1-contact">Contact Us</h1>
+                <h1 class="h1-contact">Contact</h1>
                 <form>
                     <div id="messageBox"></div>
                     <div>
