--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <div class="navbar-links">
                     <ul>
                         <li><a href="index.html" class="nav-link active">Home</a></li>
+                        <li><a href="bloglist.html" class="nav-link">Posts</a></li>
                         <li><a href="about.html" class="nav-link">About</a></li>
-                        <li><a href="bloglist.html" class="nav-link">Blog Posts</a></li>
                         <li><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
