worked on my navbar modal and window onscroll

--- a/bloglist.html
+++ b/bloglist.html
@@ -48,7 +48,13 @@
         </nav>
     </header>
     <main>
-        <div class="posts-header"></div>
+        <div class="nav-modal-container"></div>
+        <div class="posts-header">
+        </div>
+        <div class="search-wrapper">
+            <label for="search">Search</label>
+            <input type="search" id="search" data-search>
+        </div>
         <div class="posts-container"></div>
         <div class="view-more-container"></div>
     </main>
