--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,7 @@
         </nav>
     </header>
     <main>
+        <div class="nav-modal-container"></div>
         <div class="contact-page">
             <div class="contact">
                 <h1 class="h1-contact">Contact</h1>
