--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <header>
         <nav class="navbar">
             <div class="nav-child">
-                <a href="#"><img src="/icons/icons8-evergreen-100.png" alt="logo of a tree" class="logo-icon"></a>
+                <a href="/index.html"><img src="/icons/icons8-evergreen-100.png" alt="logo of a tree"
+                        class="logo-icon"></a>
                 <a href="#" class="toggle-menu">
                     <div class="menu-btn_burger"></div>
                 </a>
@@ -48,10 +49,11 @@
         </nav>
     </header>
     <main>
+        <div class="nav-modal-container"></div>
         <div class="featured-img"></div>
         <div class="slider-title"></div>
 
-        <section class="carousel_container">
+        <div class="carousel_container">
             <button class="slide-arrow" id="slide-arrow-prev">&#8249;</button>
             <button class="slide-arrow" id="slide-arrow-next">&#8250;</button>
 
@@ -60,23 +62,7 @@
 
                 </div>
             </div>
-        </section>
-
-
-
-        <!-- <div class="carousel-container">
-            <button class="carousel_button--left carousel_button is-hidden">&#8249;</button>
-            <div class="carousel_track-container">
-                <div class="carousel_track">
-                    <div class="carousel_slide">
-                    </div>
-                </div>
-            </div>
-            <button class="carousel_button--right carousel_button">&#8250;</button>
-            <div class="carousel_nav">
-                <button class="carousel_indicator current-slide"></button>
-                <button class="carousel_indicator"></button>
-                <button class="carousel_indicator"></button> -->
+        </div>
         </div>
         </div>
     </main>
