trying to implement a search function... struggle is real

--- a/bloglist.html
+++ b/bloglist.html
@@ -52,8 +52,7 @@
         <div class="posts-header">
         </div>
         <div class="search-wrapper">
-            <label for="search">Search</label>
-            <input type="search" id="search" data-search>
+            <input type="text" id="search" onkeyup="searchFunction()" placeholder="Search for posts..">
         </div>
         <div class="posts-container"></div>
         <div class="view-more-container"></div>
