--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/16bf78a0e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="/js/main.js" defer></script>
-    <script src="/js/contact.js" defer></script>
+    <script src="/js/main.js" type="module" defer></script>
+    <script src="/js/contact.js" type="module" defer></script>
     <title>Contact | My blog</title>
     <!-- Hotjar Tracking Code for school blog exam -->
     <script>
