test onlick error

--- a/about.html
+++ b/about.html
@@ -48,8 +48,11 @@
         </nav>
     </header>
     <main>
+        <div class="errorMsg"></div>
         <div class="nav-modal-container"></div>
-        <div class="about-content"></div>
+        <div class="about-content">
+            <div class="loader"></div>
+        </div>
     </main>
     <footer>
         <div class="footer-container">
