--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Feel free to get in touch through the contact form">
+    <meta name="description" content="Contact form for my outdoor activities blog">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/16bf78a0e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="/js/main.js" type="module" defer></script>
-    <script src="/js/contact.js" type="module" defer></script>
+    <script src="/js/main.js" type="module"></script>
+    <script src="/js/contact.js" type="module"></script>
     <title>Contact | My blog</title>
     <!-- Hotjar Tracking Code for school blog exam -->
     <script>
