--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/16bf78a0e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
     <script src="/js/about.js" type="module"></script>
-    <script src="/js/main.js" type="module"></script>
+    <script src="/js/global.js" type="module"></script>
     <title>About | My blog</title>
     <!-- Hotjar Tracking Code for school blog exam -->
     <script>
