--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/16bf78a0e8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
     <script src="/js/index.js" type="module"></script>
-    <script src="/js/main.js" type="module"></script>
+    <script src="/js/global.js" type="module"></script>
     <title>Home | My blog</title>
     <!-- Hotjar Tracking Code for school blog exam -->
     <script>
@@ -67,9 +67,7 @@
     </main>
 </body>
 <footer>
-    <div class="footer-container">
-
-    </div>
+    <div class="footer-container"></div>
 </footer>
 
 </html>
